# deepseek-acp-adapter

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  acp-debug.sh  debug-adapter.sh
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  publish.yml  release-plz.yml
src/: acp.rs  dev.rs  lib.rs  main.rs  mcp.rs  session.rs  session_store.rs  test_utils.rs  tools.rs  turn.rs
src/acp/: mod.rs  requesters.rs  tests.rs
src/deepseek/: client.rs  mod.rs  stream.rs  tests.rs  types.rs
src/mcp/: tests.rs
src/session/: tests.rs
src/session_store/: tests.rs
src/tools/: execution.rs  mod.rs  registry.rs
src/tools/execution/: mod.rs  tests.rs
src/turn/: tests.rs
tests/: mcp_stdio_fixture.rs  serve_shutdown.rs
