[package]
name = "deepseek-acp-adapter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace]
resolver = "3"

[lints]
workspace = true

[workspace.dependencies]
test-log = { version = "=0.2.21", default-features = false, features = ["trace"] }

[dependencies]
agent-client-protocol = { version = "=0.13.1", features = ["unstable"] }
clap = { version = "=4.5.40", features = ["derive"] }
futures-util = "=0.3.32"
globset = "=0.4.16"
grep = "=0.3.2"
ignore = "=0.4.23"
reqwest = { version = "=0.12.20", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "=0.6.0"
rmcp = { version = "=1.7.0", default-features = false, features = ["client", "transport-child-process"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.12"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "=0.7.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
uuid = { version = "=1.23.2", features = ["v4", "serde"] }

[dev-dependencies]
rmcp = { version = "=1.7.0", default-features = false, features = ["server", "transport-async-rw"] }
test-log = { workspace = true }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
# `#[must_use]` on every internal binary helper is noise at this stage.
must_use_candidate = "allow"
